--- a/estilos.css
+++ b/estilos.css
@@ -65,3 +65,9 @@ img{
     margin-left: 60px;
 
 }
+button{
+  background-color: #f78b0b;
+  margin-bottom: 5px;
+  padding: 5px;
+  border-color: #d15226;
+}
